Fixed the image bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     --font-size-tablet-large:  32px;
 
     --font-size-mobile:        18px;
-    --font-size-mobile-large:  36px;
+    --font-size-mobile-large:  24px;
 
     --letter-spacing:  0.2px;
 
@@ -77,8 +77,8 @@ body {
 }
 img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    object-fit: contain;
 }
 
 /* Typography */
@@ -257,6 +257,7 @@ nav {
 }
 .project-card > img {
     height: 340px;
+    object-fit: cover;
     transition: var(--transition);
 }
 .project-card:hover {
@@ -340,7 +341,7 @@ footer {
     }
     section, footer {
         width: var(--width-mobile);
-        padding-top: var(--spacing-large);
+        padding-top: var(--spacing-medium);
     }
     footer {
         flex-direction: column;
